# MY_SCRIPTS

./: .gitignore
folder-auto-organizer/src/: log.py  main.py
folder-auto-organizer/src/lib/: __init__.py  cli.py  exceptions.py  organizer.py
folder-auto-organizer/test/: rand_files.py  test_main.py
lookup/: DOCUMENTATION.md  __main__.py  lookup.py  pyproject.toml  setup.py
lookup/tests/: test_lookup.py
setup/: README.md  setup_dev.py  utils.py
src/: __main__.py
src/lib/: cli.py  config.py  utils.py
