[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lookup"
dynamic = ["version"]
description = "Cross-platform CLI utility to lookup files/directories by pattern, with open/delete actions"
readme = "DOCUMENTATION.md"
requires-python = ">=3.10"
authors = [{name = "Femiznet", email = "femiznet.dev@gmail.com"}]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Utilities",
]

[project.urls]
Homepage = "https://github.com/femiznet/lookup"
Repository = "https://github.com/femiznet/lookup"
Issues = "https://github.com/femiznet/lookup/issues"

[project.scripts]
lookup = "lookup:main"

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-cov>=4.0"]

[tool.setuptools.dynamic]
version = {attr = "lookup.__version__"}

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
addopts = "-v --tb=short"

[tool.setuptools]
py-modules = ["lookup"]
